# template_python

./: .dockerignore  .env.template  .gitignore  Dockerfile  Justfile  Makefile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
src/: main.py
src/_scratch/: scratch.py
src/utils/: logger.py
