[project]
name = "template_python"
version = "0.1.0"
description = "Template Project for Python using Pixi Package Manager"
authors = [
	{ name = "pszponder", email = "14116413+pszponder@users.noreply.github.com" },
]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
template_python = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python src/main.py"
lint = "ruff lint"

[tool.pixi.dependencies]
ruff = ">=0.4.4,<0.5"
pytest = ">=8.2.0,<8.3"
python-dotenv = ">=1.0.1,<1.1"

[tool.ruff.lint]
select = [
	# pycodestyle
	"E",
	# Pyflakes
	"F",
	# pyupgrade
	"UP",
	# flake8-bugbear
	"B",
	# flake8-simplify
	"SIM",
	# isort
	"I",
]
ignore = ["F401"]
